2013-09-12  Ryosuke Niwa  <rniwa@webkit.org>

        Qt build fix. Add a return to make the compiler happy.

        * dfg/DFGGPRInfo.h:
        (JSC::DFG::JSValueRegs::gpr):

2013-09-12  Filip Pizlo  <fpizlo@apple.com>

        DFG::GenerationInfo init/fill methods shouldn't duplicate a bunch of logic
        https://bugs.webkit.org/show_bug.cgi?id=121253

        Reviewed by Oliver Hunt.

        * dfg/DFGGenerationInfo.h:
        (JSC::DFG::GenerationInfo::initGPR):
        (JSC::DFG::GenerationInfo::initInt32):
        (JSC::DFG::GenerationInfo::initJSValue):
        (JSC::DFG::GenerationInfo::initCell):
        (JSC::DFG::GenerationInfo::initBoolean):
        (JSC::DFG::GenerationInfo::initStorage):
        (JSC::DFG::GenerationInfo::fillGPR):
        (JSC::DFG::GenerationInfo::fillJSValue):
        (JSC::DFG::GenerationInfo::fillCell):
        (JSC::DFG::GenerationInfo::fillInt32):
        (JSC::DFG::GenerationInfo::fillBoolean):
        (JSC::DFG::GenerationInfo::fillStorage):

2013-09-12  Filip Pizlo  <fpizlo@apple.com>

        Unreviewed, fix mispelling (Specualte -> Speculate) that I introduced in an
        earlier patch.

        * dfg/DFGSpeculativeJIT.h:
        (JSC::DFG::SpeculateInt32Operand::gpr):
        (JSC::DFG::SpeculateStrictInt32Operand::gpr):
        * dfg/DFGSpeculativeJIT32_64.cpp:
        (JSC::DFG::SpeculativeJIT::fillSpeculateInt32Internal):
        (JSC::DFG::SpeculativeJIT::fillSpeculateInt32):
        (JSC::DFG::SpeculativeJIT::fillSpeculateInt32Strict):
        * dfg/DFGSpeculativeJIT64.cpp:
        (JSC::DFG::SpeculativeJIT::fillSpeculateInt32Internal):
        (JSC::DFG::SpeculativeJIT::fillSpeculateInt32):
        (JSC::DFG::SpeculativeJIT::fillSpeculateInt32Strict):

2013-09-12  Filip Pizlo  <fpizlo@apple.com>

        GPRTemporary's reuse constructor should be templatized to reduce code duplication, and the bool to denote tag or payload should be replaced with an enum
        https://bugs.webkit.org/show_bug.cgi?id=121250
